Fixes issue #73 - Move ChronicleMap implementation to Java 17